Add images on front page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <img src="/media/logo2.png" alt="Veusz">
+    <a href="/"><img src="/media/logo2.png" alt="Veusz"></a>
     <nav>
       <ul>
 	<li><a href="/">Home</a></li>
