--- a/css/main.css
+++ b/css/main.css
@@ -49,3 +49,10 @@ footer {
 ul.posts li {
     list-style: none;
 }
+
+.centcontainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
